--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Curso de Alura</title>
+        <title>Curso de Alura DevOps</title>
     </head>
     <body>
         <ul>
