--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <ul>
             <li>Vagrant</li>
-            <li>Docker: creando containers</li>
+            <li>curso de docker: creando containers</li>
             <li>Ansible</li>
             <li>Integración Continua: Madurez y productividad en el desarrollo de software</li>
             <li>kubernetes</li>
